# unikorn-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE20  LICENSE-MIT  README.md
choseong-pullup/: Cargo.toml
choseong-pullup/src/: lib.rs
horizontal-chojongseong-flip/: Cargo.toml
horizontal-chojongseong-flip/src/: lib.rs
jongseong-pushdown/: Cargo.toml
jongseong-pushdown/src/: lib.rs
src/: consonant.rs  error.rs  lib.rs  syllable.rs  vowel.rs
src/consonant/: choseong.rs  halfwidth.rs  jaeum.rs  jongseong.rs  mod.rs
src/vowel/: halfwidth.rs  jungseong.rs  mod.rs  moeum.rs
unicode-korean-multitool/: Cargo.toml  README.md
unicode-korean-multitool/src/: lib.rs
