[package]
name = "unikorn"
version = "0.1.0"
authors = ["ylsun <y15un@y15un.dog>"]
edition = "2021"
rust-version = "1.64.0"
description = "a library for handling korean alphabets in unicode"
repository = "https://github.com/y15un/unikorn-rs"
license = "MIT"
keywords = ["korean", "language"]
categories = ["text-processing"]

[dependencies]
num_enum = { version = "0.6" } # MIT

[features]
default = ["archaic-korean"] # temporarily enable by default for ease of development
archaic-korean = []
