[package]
name = "horizontal-chojongseong-flip"
description = "고좁더 풍셔슁징치 (초종성 수평뒤집기) in Rust"
version = "0.1.1"
authors = ["ylsun <y15un@y15un.dog>"]
license = "MIT"
edition = "2018"
workspace = "../"

[dependencies]
unicode-korean-multitool = { path = "../unicode-korean-multitool", version = "0.2" } # MIT
